<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Common app texts -->
    <string name="app_name">FIT4LIFE</string>
    <string name="action_settings">Настройки</string>
    <string name="action_back">Назад</string>
    <string name="action_home">На главную</string>

    <!-- Main menu texts -->
    <string name="main_menu_text00">Упражнения</string>
    <string name="main_menu_text01">Таблицы</string>
    <string name="main_menu_text02">Видеовыпуски</string>
    <string name="main_menu_text10">Подполье</string>
    <string name="main_menu_text11">Дневник</string>
    <string name="main_menu_text12">Аудиовыпуски</string>
    <string name="main_menu_text20">Планировщик</string>
    <string name="main_menu_text21">Замерки</string>
    <string name="main_menu_text22">Общение</string>

    <!-- Activity titles texts -->
    <string name="title_activity_body_parts">Части тела</string>
    <string name="title_activity_exercises">Упражнения</string>
    <string name="title_activity_exercises_item">Описание упражнения</string>
    <string name="title_activity_tables">Таблицы</string>
    <string name="title_activity_video">Видеовыпуски</string>
    <string name="title_activity_underground">Подполье</string>
    <string name="title_activity_underground_item">Статья</string>
    <string name="title_activity_diary">Дневник</string>
    <string name="title_activity_audio">Аудиовыпуски</string>
    <string name="title_activity_planner">Планировщик</string>
    <string name="title_activity_measurements">Замерки</string>
    <string name="title_activity_communication">Общение</string>
    <string name="title_activity_nutrients">Б+Ж+У+ККал</string>
    <string name="title_activity_glycemic_index">Гликемический Индекс</string>

    <!-- Exercise item activity texts -->
    <string name="exercise_item_exercise_type_title">Тип</string>
    <string name="exercise_item_description_title">Описание</string>
    <string name="exercise_item_technique_title">Техника</string>
    <string name="exercise_item_working_muscles_title">Работающие мышцы</string>
    <string name="exercise_item_video_title">Видео</string>
    <string name="exercise_item_data_found">Данные временно отсутствуют.</string>

    <!-- message box body part texts -->
    <string name="alert_title_empty_body_parts">Инфо</string>
    <string name="alert_message_empty_body_parts">Данный раздел пуст.</string>
    <string name="title_activity_foods_weight">Определение веса продуктов</string>
    <string name="title_activity_glycemic_index_new_item">Добавить в таблицу ГИ</string>

    <!-- texts for tables activities -->
    <string name="tables_product_already_exists">Такой продукт уже есть в таблице</string>
    <string name="tables_enter_product_name">Введите название продукта</string>
    <string name="tables_glycemic_index_value_is_empty">Введите значение ГИ</string>
    <string name="tables_nutrients_proteins_is_empty">Введите значение белков</string>
    <string name="tables_nutrients_fats_is_empty">Введите значение жиров</string>
    <string name="tables_nutrients_carbs_is_empty">Введите значение углеводов</string>
    <string name="tables_nutrients_calories_is_empty">Введите значение ККал</string>
    <string name="tables_nutrients_values_to_match">На 100гр продукта не может быть больше 100гр нутриентов</string>
    <string name="tables_data_changed">Данные изменены</string>

    <string-array name="tables_context_menu">
        <item>Add</item>
        <item>Edit</item>
        <item>Delete</item>
    </string-array>

    <string name="atEdit">Update existing item</string>
    <string name="atNew">Insert new item</string>

    <!-- loading dialog box texts -->
    <string name="loading_dialog_database_is_syncing_title">Внимание!</string>
    <string name="loading_dialog_database_is_syncing_message">Пожалуйста подождите, происходит обновление базы данных.</string>
    <string name="title_activity_diary_new_program">Создать программу</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_diary_programs">Програмы тренировок</string>
    <string name="title_activity_nutrients_new_item">Добавить продукт</string>
    <string name="title_activity_foods_weight_new_item">Новый продукт</string>

</resources>
