<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:orientation="vertical"
             android:background="#373737"
        >

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:src="@drawable/f4l_logo"
                android:layout_column="0"
                android:layout_marginTop="20dp"
                android:layout_span="3"
                android:layout_marginBottom="40dp"/>
    </TableRow>

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

        <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/main_btn_exercises"
                android:layout_column="0"
                android:background="@drawable/main_btn_exercises_selector"
                android:singleLine="false"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:onClick="showSubMenu"
                />

        <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/main_btn_tables"
                android:layout_column="1"
                android:background="@drawable/main_btn_tables_selector"
                android:singleLine="false"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:onClick="showSubMenu"
                />

        <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/main_btn_video"
                android:layout_column="2"
                android:background="@drawable/main_btn_video_selector"
                android:singleLine="false"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:onClick="showSubMenu"
                />
    </TableRow>

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            >

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/main_menu_text00"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="11dp"
                android:textColor="#E8E8E8"
                />
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/main_menu_text01"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="11dp"
                android:textColor="#E8E8E8"
                />
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/main_menu_text02"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="11dp"
                android:textColor="#E8E8E8"
                />
    </TableRow>

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

        <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/main_btn_underground"
                android:layout_column="0"
                android:background="@drawable/main_btn_underground_selector"
                android:singleLine="false"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:onClick="showSubMenu"
                />

        <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/main_btn_diary"
                android:layout_column="1"
                android:background="@drawable/main_btn_diary_selector"
                android:singleLine="false"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:onClick="showSubMenu"
                />

        <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/main_btn_audio"
                android:layout_column="2"
                android:background="@drawable/main_btn_audio_selector"
                android:singleLine="false"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:onClick="showSubMenu"
                />
    </TableRow>

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            >

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/main_menu_text10"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="11dp"
                android:textColor="#E8E8E8"
                />
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/main_menu_text11"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="11dp"
                android:textColor="#E8E8E8"
                />
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/main_menu_text12"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="11dp"
                android:textColor="#E8E8E8"
                />
    </TableRow>

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

        <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/main_btn_planner"
                android:layout_column="0"
                android:background="@drawable/main_btn_planner_selector"
                android:singleLine="false"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:onClick="showSubMenu"
                />

        <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/main_btn_measurements"
                android:layout_column="1"
                android:background="@drawable/main_btn_measurements_selector"
                android:singleLine="false"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:onClick="showSubMenu"
                />

        <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/main_btn_communication"
                android:layout_column="2"
                android:background="@drawable/main_btn_communication_selector"
                android:singleLine="false"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:onClick="showSubMenu"
                />
    </TableRow>

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            >

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/main_menu_text20"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="11dp"
                android:textColor="#E8E8E8"
                />
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/main_menu_text21"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="11dp"
                android:textColor="#E8E8E8"
                />
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/main_menu_text22"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="11dp"
                android:textColor="#E8E8E8"
                />
    </TableRow>
</TableLayout>
